feat: apply readModel (#57)
##  Summary
- 강사 이름을 반환해야 하는데, domain 을 수정할까 고민하다 , read 용 필드가 추가되면 될 수록 도메인이 순수성을
잃기 때문에
확장성을 고려해 CourseReadEntity 을 추가작성했습니다 

 -> 도메인 이벤트를 발행하여 엔티티를 update 동기식
 -> 도메인 이벤트에서 integratoin은 비동기식

- 도메인 이벤트 발행 시 event가 많아질수록 eventHandler가 많아 질 거라 고려해 crudEvent 인터페이스 추가
integration에서는 crudEvent는 사용하지 않습니다 

Read Model 업데이트 :  내부 DB 작업, 구조 비슷
Integration Event 발행 : 이벤트별 페이로드 다름

##  Related Issue
- Issue Number: #<이슈번호>
- (선택) Closes #<이슈번호>  ← 머지 시 자동 닫힘

##  Changes
- 주요 변경사항 bullet

##  Discussion Topic
- 의논하고싶은 주제

##  Checklist
- [x] 로컬 테스트 완료
- [x] lint 통과(로컬)
- [x] 리뷰어 요청(최소 2명), 라벨/스코프 지정
- [ ] 브랜치 최신화(rebase) 및 충돌 없음
